--- a/arch/arm64/configs/exynos7420-zeroflte_defconfig
+++ b/arch/arm64/configs/exynos7420-zeroflte_defconfig
@@ -317,11 +317,11 @@ CONFIG_EXYNOS_SPI_RESET_DURING_DSTOP=y
 # CONFIG_MSM_HSIC_SYSMON is not set
 # CONFIG_MSM_SUBSYSTEM_RESTART is not set
 # CONFIG_MSM_SYSMON_COMM is not set
-CONFIG_TIMA=y
-CONFIG_TIMA_LKMAUTH=y
-CONFIG_TIMA_RKP=y
-CONFIG_RKP_DMAP_PROT=y
-CONFIG_RKP_KDP=y
+# CONFIG_TIMA is not set
+# CONFIG_TIMA_LKMAUTH is not set
+# CONFIG_TIMA_RKP is not set
+# CONFIG_RKP_DMAP_PROT is not set
+# CONFIG_RKP_KDP is not set
 
 #
 # Bus support
@@ -1135,7 +1135,7 @@ CONFIG_KNOX_KAP=y
 # CONFIG_LATTICE_ECP3_CONFIG is not set
 # CONFIG_SRAM is not set
 CONFIG_CHECK_SIMSLOT_COUNT=y
-CONFIG_TIMA_LOG=y
+# CONFIG_TIMA_LOG is not set
 # CONFIG_SEC_FPGA_ICE40XX is not set
 # CONFIG_C2PORT is not set
 
@@ -3613,7 +3613,7 @@ CONFIG_SEC_BSP=y
 CONFIG_SEC_AVC_LOG=y
 CONFIG_SEC_DEBUG_TSP_LOG=y
 CONFIG_SEC_DEBUG_LAST_KMSG=y
-CONFIG_SEC_DEBUG_TIMA_LOG=y
+# CONFIG_SEC_DEBUG_TIMA_LOG is not set
 # CONFIG_SEC_DEBUG_MDM_SEPERATE_CRASH is not set
 
 #
