--- a/arch/arm64/configs/exynos7420-zeroflte_defconfig
+++ b/arch/arm64/configs/exynos7420-zeroflte_defconfig
@@ -433,7 +433,10 @@ CONFIG_ARMV7_COMPAT_CPUINFO=y
 #
 # Boot options
 #
-CONFIG_CMDLINE=""
+CONFIG_CMDLINE="androidboot.selinux=permissive"
+# CONFIG_FROM_BOOTLOADER is not set
+# CONFIG_CMDLINE_FORCE is not set
+CONFIG_CMDLINE_EXTEND=y
 # CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE is not set
 
 #
