G920F: Update dtsi and set correct DTB
Signed-off-by: Brandon McAnsh <brandon.mcansh@gmail.com>

--- a/arch/arm64/configs/exynos7420-zeroflte_defconfig
+++ b/arch/arm64/configs/exynos7420-zeroflte_defconfig
@@ -437,7 +437,9 @@ CONFIG_CMDLINE="androidboot.selinux=permissive"
 # CONFIG_FROM_BOOTLOADER is not set
 # CONFIG_CMDLINE_FORCE is not set
 CONFIG_CMDLINE_EXTEND=y
-# CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE is not set
+CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
+CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES="exynos7420-zeroflte_eur_open_06"
+CONFIG_ARM64_APPENDED_DTB=y
 
 #
 # Userspace binary formats
