--- a/arch/arm64/configs/exynos7420-zerolte_defconfig
+++ b/arch/arm64/configs/exynos7420-zerolte_defconfig
@@ -431,7 +431,8 @@ CONFIG_ARMV7_COMPAT_CPUINFO=y
 # Boot options
 #
 CONFIG_CMDLINE=""
-# CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE is not set
+CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y 
+CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES="exynos7420-zerolte_eur_open_08"
 
 #
 # Userspace binary formats
