zeroltexx: set selinux to permissive

--- a/arch/arm64/configs/exynos7420-zeroltexx_defconfig
+++ b/arch/arm64/configs/exynos7420-zeroltexx_defconfig
@@ -430,7 +430,7 @@ CONFIG_ARMV7_COMPAT_CPUINFO=y
 #
 # Boot options
 #
-CONFIG_CMDLINE=""
+CONFIG_CMDLINE="androidboot.selinux=permissive"
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y 
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES="exynos7420-zerolte_eur_open_08"
 
