--- a/arch/arm64/configs/cm_zerofltetmo_defconfig
+++ b/arch/arm64/configs/cm_zerofltetmo_defconfig
@@ -38,7 +38,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-# CONFIG_LOCALVERSION is not set
+CONFIG_LOCALVERSION=""
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
@@ -102,7 +102,7 @@ CONFIG_RCU_FANOUT_LEAF=16
 CONFIG_LOG_BUF_SHIFT=19
 CONFIG_GENERIC_SCHED_CLOCK=y
 CONFIG_CGROUPS=y
-# CONFIG_CGROUP_DEBUG is not set
+CONFIG_CGROUP_DEBUG=y
 CONFIG_CGROUP_FREEZER=y
 # CONFIG_CGROUP_DEVICE is not set
 CONFIG_CPUSETS=y
@@ -175,6 +175,7 @@ CONFIG_SLUB=y
 # CONFIG_SLOB is not set
 CONFIG_DEFERRED_INITCALLS=y
 CONFIG_PROFILING=y
+CONFIG_TRACEPOINTS=y
 # CONFIG_JUMP_LABEL is not set
 # CONFIG_HAVE_64BIT_ALIGNED_ACCESS is not set
 CONFIG_HAVE_EFFICIENT_UNALIGNED_ACCESS=y
@@ -1178,7 +1179,8 @@ CONFIG_KNOX_KAP=y
 # CONFIG_LATTICE_ECP3_CONFIG is not set
 # CONFIG_SRAM is not set
 CONFIG_UID_CPUTIME=y
-CONFIG_CHECK_SIMSLOT_COUNT=y
+# CONFIG_CHECK_SIMSLOT_COUNT is not set
+# CONFIG_TIMA_LOG is not set
 # CONFIG_CHECK_GPIO_DETECT is not set
 # CONFIG_SEC_FPGA_ICE40XX is not set
 # CONFIG_C2PORT is not set
@@ -1255,9 +1257,6 @@ CONFIG_MUIC_MAX77843=y
 CONFIG_HV_MUIC_MAX77843_AFC=y
 CONFIG_MUIC_MAX77843_IGNORE_ADCERR_WA=y
 CONFIG_MUIC_MAX77843_RESET_WA=y
-CONFIG_MUIC_MAX77833=y
-CONFIG_HV_MUIC_MAX77833_AFC=y
-CONFIG_MUIC_MAX77833_SHAKEID_WA=y
 # CONFIG_MUIC_S2MM001 is not set
 # CONFIG_MUIC_HV_FORCE_LIMIT is not set
 
@@ -1657,7 +1656,7 @@ CONFIG_WLAN_REGION_CODE=100
 CONFIG_WLAIBSS=y
 CONFIG_WL_RELMCAST=y
 # CONFIG_WL_NAN is not set
-CONFIG_BCMDHD_PCIE=y
+CONFIG_BCMDHD_PCIE=
 # CONFIG_BCMDHD_PREALLOC_PKTIDMAP is not set
 # CONFIG_BCMDHD_PREALLOC_MEMDUMP is not set
 # CONFIG_BCM4358_A3 is not set
@@ -2337,7 +2336,7 @@ CONFIG_MFD_CORE=y
 # CONFIG_MFD_MAX77823 is not set
 # CONFIG_MFD_MAX77828 is not set
 CONFIG_MFD_MAX77843=y
-CONFIG_MFD_MAX77833=y
+# CONFIG_MFD_MAX77833 is not set
 # CONFIG_MFD_MAX77888 is not set
 # CONFIG_MFD_MAX8907 is not set
 # CONFIG_MFD_MAX8925 is not set
@@ -2417,7 +2416,6 @@ CONFIG_REGULATOR_ARIZONA=y
 # CONFIG_REGULATOR_MAX77826 is not set
 CONFIG_REGULATOR_MAX77838=y
 CONFIG_REGULATOR_MAX77843=y
-CONFIG_REGULATOR_MAX77833=y
 # CONFIG_REGULATOR_LP3971 is not set
 # CONFIG_REGULATOR_LP3972 is not set
 # CONFIG_REGULATOR_LP872X is not set
@@ -2627,7 +2625,7 @@ CONFIG_MALI_PLATFORM_THIRDPARTY_NAME="7420"
 # CONFIG_MALI_MIDGARD_WK04 is not set
 CONFIG_MALI_DVFS=y
 CONFIG_MALI_T7XX=y
-CONFIG_MALI_R5P0=y
+CONFIG_MALI_R5P0=
 CONFIG_MALI_SYSTRACE_SUPPORT=y
 CONFIG_MALI_RT_PM=y
 CONFIG_MALI_ENABLE_TRACE=y
@@ -2876,7 +2874,7 @@ CONFIG_SND_SOC=y
 # CONFIG_SND_ATMEL_SOC is not set
 # CONFIG_SND_DESIGNWARE_I2S is not set
 CONFIG_SND_SOC_SAMSUNG=y
-CONFIG_SND_SAMSUNG_I2S=y
+CONFIG_SND_SAMSUNG_I2S=
 CONFIG_SND_SAMSUNG_COMPR=y
 CONFIG_SND_SAMSUNG_AUDSS=y
 CONFIG_SND_ESA_SA_EFFECT=y
@@ -2905,11 +2903,11 @@ CONFIG_SND_SOC_SAMSUNG_ARIZONA=y
 # CONFIG_SND_SOC_SAMSUNG_SMDK5422_WM8994 is not set
 # CONFIG_SND_SOC_SAMSUNG_UNIVERSAL7580_COD3022X is not set
 # CONFIG_SND_SAMSUNG_AUX_HDMI is not set
-# CONFIG_SND_SAMSUNG_AUX_SPDIF is not set
+# CONFIG_SND_SAMSUNG_AUX_SPDIF is not 
 CONFIG_SND_SAMSUNG_SEIREN_DMA=y
 CONFIG_SND_SAMSUNG_SEIREN=y
 CONFIG_SND_SAMSUNG_SEIREN_OFFLOAD=y
-# CONFIG_SND_SAMSUNG_SEIREN_DEBUG is not set
+# CONFIG_SND_SAMSUNG_SEIREN_DEBUG is not 
 CONFIG_SND_SAMSUNG_ELPE=y
 # CONFIG_SND_SAMSUNG_DEBUGFS is not set
 CONFIG_SND_SOC_I2C_AND_SPI=y
@@ -2930,10 +2928,10 @@ CONFIG_SND_SOC_DUMMY_CODEC=y
 #
 # Audience earSmart codecs
 #
-# CONFIG_SND_SOC_ES705 is not set
+CONFIG_SND_SOC_ES705=y
 # CONFIG_SND_SOC_ES704 is not set
 # CONFIG_SND_SOC_ES804 is not set
-# CONFIG_SND_SOC_ES_I2C is not set
+CONFIG_SND_SOC_ES_I2C=y
 # CONFIG_SND_SOC_ESXXX_UART_FW_DOWNLOAD is not set
 # CONFIG_SND_SOC_ESXXX_UART_WAKEUP is not set
 # CONFIG_SND_SOC_3MIC_SUPPORT is not set
@@ -2942,7 +2940,7 @@ CONFIG_SND_SOC_DUMMY_CODEC=y
 # CONFIG_SND_SOC_ESXXX_RESTORE_STD_FW is not set
 # CONFIG_SND_SOC_ESXXX_VEQ_FILTER is not set
 # CONFIG_SND_SOC_ESXXX_VEQ_EXTENDEDVOLUME is not set
-# CONFIG_SND_SOC_ESXXX_UPDATE_VEQ_TABLE is not set
+# CONFIG_SND_SOC_ESXXX_UPDATE_VEQ_TABLE is not 
 # CONFIG_SND_SOC_ES_STREAM_FS_STORER is not set
 # CONFIG_SND_SIMPLE_CARD is not set
 # CONFIG_SOUND_PRIME is not set
@@ -3339,7 +3337,6 @@ CONFIG_LEDS_CLASS=y
 # CONFIG_LEDS_LM355x is not set
 # CONFIG_LEDS_OT200 is not set
 # CONFIG_LEDS_BLINKM is not set
-CONFIG_LEDS_MAX77833_RGB=y
 CONFIG_LEDS_MAX77843_RGB=y
 CONFIG_LEDS_S2MPB02=y
 CONFIG_LEDS_KTD2692=y
@@ -3351,8 +3348,8 @@ CONFIG_LEDS_KTD2692=y
 CONFIG_SWITCH=y
 # CONFIG_SWITCH_GPIO is not set
 CONFIG_SWITCH_ANTENNA=y
-# CONFIG_SWITCH_ANTENNA_IF is not set
-CONFIG_SWITCH_ANTENNA_EARJACK=y
+CONFIG_SWITCH_ANTENNA_IF=y
+# CONFIG_SWITCH_ANTENNA_EARJACK is not set
 # CONFIG_SWITCH_ANTENNA_EARJACK_IF is not set
 CONFIG_SWITCH_ARIZONA=y
 # CONFIG_ACCESSIBILITY is not set
@@ -3616,7 +3613,7 @@ CONFIG_ANDROID_LOGGER=y
 CONFIG_ANDROID_TIMED_OUTPUT=y
 # CONFIG_ANDROID_TIMED_GPIO is not set
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
-CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
+CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=
 CONFIG_ANDROID_LMK_ADJ_RBTREE=y
 CONFIG_ANDROID_INTF_ALARM_DEV=y
 CONFIG_SYNC=y
@@ -3724,10 +3721,9 @@ CONFIG_DEVFREQ_GOV_SIMPLE_EXYNOS=y
 CONFIG_ARM_EXYNOS7420_BUS_DEVFREQ=y
 CONFIG_ARM_EXYNOS7420_BUS_DEVFREQ_THERMAL_OFFSET=y
 CONFIG_ARM_EXYNOS7420_BUS_DEVFREQ_ODT_OFF=y
-CONFIG_ARM_EXYNOS7420_BUS_DEVFREQ_ADV_MIF_THERMAL_POLLING=y
+CONFIG_ARM_EXYNOS7420_BUS_DEVFREQ_ADV_MIF_THERMAL_POLLING=
 CONFIG_ARM_EXYNOS7420_BUS_DEVFREQ_TDNR=y
 CONFIG_VIBETONZ=y
-CONFIG_MOTOR_DRV_MAX77833=y
 CONFIG_MOTOR_DRV_MAX77843=y
 # CONFIG_MOTOR_DRV_ISA1200 is not set
 # CONFIG_MOTOR_DRV_ISA1400 is not set
@@ -3843,7 +3839,7 @@ CONFIG_BATTERY_SAMSUNG=y
 # CONFIG_CHARGING_VZWCONCEPT is not set
 CONFIG_BATTERY_SWELLING=y
 CONFIG_BATTERY_SWELLING_SELF_DISCHARGING=y
-CONFIG_BATTERY_SWELLING_SELF_DISCHARGING_ZERO_ONLY=y
+# CONFIG_BATTERY_SWELLING_SELF_DISCHARGING_ZERO_ONLY is not set
 CONFIG_INBATTERY=y
 CONFIG_CALC_TIME_TO_FULL=y
 # CONFIG_BATTERY_AGE_FORECAST is not set
@@ -3853,7 +3849,7 @@ CONFIG_CALC_TIME_TO_FULL=y
 # CONFIG_FUELGAUGE_MAX17050 is not set
 # CONFIG_FUELGAUGE_MAX77823 is not set
 CONFIG_FUELGAUGE_MAX77843=y
-CONFIG_FUELGAUGE_MAX77833=y
+# CONFIG_FUELGAUGE_MAX77833 is not set
 # CONFIG_CHARGER_DUMMY is not set
 # CONFIG_CHARGER_SMB328 is not set
 # CONFIG_CHARGER_BQ24157 is not set
@@ -3861,7 +3857,7 @@ CONFIG_FUELGAUGE_MAX77833=y
 # CONFIG_CHARGER_BQ24260 is not set
 # CONFIG_CHARGER_MAX77823 is not set
 CONFIG_CHARGER_MAX77843=y
-CONFIG_CHARGER_MAX77833=y
+# CONFIG_CHARGER_MAX77833 is not set
 CONFIG_WIRELESS_CHARGER_INBATTERY=y
 CONFIG_WIRELESS_CHARGER_INBATTERY_CS100=y
 # CONFIG_WIRELESS_CHARGER_INBATTERY_5V_FIX is not set
@@ -3876,7 +3872,6 @@ CONFIG_SAMSUNG_LPM_MODE=y
 # CONFIG_EN_OOPS is not set
 CONFIG_DISABLE_SAVE_CAPACITY_MAX=y
 # CONFIG_FIX_CHG_FQ_4MHZ is not set
-# CONFIG_STORE_MODE is not set
 # CONFIG_RESET_CONTROLLER is not set
 CONFIG_SENSORS_SSP=y
 # CONFIG_SENSORS_SSP_STM is not set
@@ -4183,7 +4178,7 @@ CONFIG_FRAME_WARN=2064
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_STRIP_ASM_SYMS=y
 # CONFIG_READABLE_ASM is not set
-# CONFIG_UNUSED_SYMBOLS is not set
+# CONFIG_UNUSED_SYMBOLS is not 
 # CONFIG_PAGE_OWNER is not set
 CONFIG_DEBUG_FS=y
 # CONFIG_HEADERS_CHECK is not set
@@ -4409,7 +4404,7 @@ CONFIG_CRYPTO_TWOFISH_COMMON=y
 #
 CONFIG_CRYPTO_DEFLATE=y
 # CONFIG_CRYPTO_ZLIB is not set
-CONFIG_CRYPTO_LZO=y
+CONFIG_CRYPTO_LZO=
 CONFIG_CRYPTO_LZ4=y
 CONFIG_CRYPTO_LZ4HC=y
 
@@ -4489,3 +4484,4 @@ CONFIG_ARCH_HAS_ATOMIC64_DEC_IF_POSITIVE=y
 # CONFIG_CORDIC is not set
 # CONFIG_DDR is not set
 # CONFIG_QMI_ENCDEC is not set
+
