--- a/arch/arm64/configs/cyanogenmod_zerofltexx_defconfig
+++ b/arch/arm64/configs/cyanogenmod_zerofltexx_defconfig
@@ -4089,9 +4089,9 @@ CONFIG_ECRYPT_FS=y
 # CONFIG_ECRYPT_FS_MESSAGING is not set
 CONFIG_WTL_ENCRYPTION_FILTER=y
 CONFIG_ECRYPT_FS_VIRTUAL_FAT_XATTR=y
-CONFIG_SDP=y
+# CONFIG_SDP is not set
 # CONFIG_SDP_KEY_DUMP is not set
-CONFIG_DLP=y
+# CONFIG_DLP is not set
 CONFIG_SCFS=y
 # CONFIG_SYSTEM_COMPRESSED is not set
 CONFIG_SCFS_LOWER_PAGECACHE_INVALIDATION=y
